kubernetes/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/websocket-services: "n8n-service"
spec:
  ingressClassName: nginx
  rules:
    - host: n8n-dev.arkhadia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
          - path: /webhook/
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
          - path: /form/
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
